<?xml version="1.0" encoding="utf-8"?>
<resources>
        <string name="app_name">BostonBusMap</string>
<string name="refreshButton">Refresh!</string>

<string name="runInBackgroundCheckbox">runInBackgroundKey</string>
<string name="showUnpredictableBusesCheckbox">showUnpredictableBusesKey</string>
<string name="allRoutesBlue">allRoutesBlue</string>
<string name="allRoutesBlueTitle">Show blue route lines?</string>
<string name="allRoutesBlueSummary">Use blue lines instead of data feed defaults</string>
<string name="showTrafficTitle">Show traffic on map?</string>
<string name="hideCircleCheckbox">hideCircleCheckboxKey</string>
<string name="numOverlaysPreference">numOverlaysPreference</string>
<string name="getDirections">Get Directions</string>
<string name="showCoarseRouteLineCheckbox">showCoarseRouteLine</string>
<string name="initAllRouteInfoCheckbox2">initAllRouteInfo</string>
<string name="addToFavorites">Favorite</string>
<string name="removeFromFavorites">Favorite</string>
<string name="refresh">Refresh</string>
<string name="bostonsLocation">Boston</string>
<string name="myLocation">My Location</string>
<string name="settings">Settings</string>
<string name="findingCurrentLocation">Finding current location&#8230;</string>
<string name="noProviders">Cannot use any location service.
Are any enabled (like GPS) in your system settings?</string>
<string name="locationUnavailable">Current location is unavailable</string>
<string name="showRoutePath">Show route path?</string>
<string name="updateContinuously">Update frequency</string>
<string name="showUnpredictableBuses">Show unpredictable buses?</string>
<string name="hideBlueCircle">Hide blue circle?</string>
<string name="hideBlueCircleSummary">This shows what buses are being viewed</string>
<string name="showRoutePathSummary">Draws a line along the selected route</string>
<string name="search_hint">Search routes</string>
<string name="search">Search</string>
<string name="chooseRoute">Routes</string>
<string name="searchHint">Search routes</string>
<string name="commentRoute">Routes: </string>
<string name="commentStop">Stops: </string>
<string name="commentOther">Problem?</string>
<string name="commentSubmit">Send feedback</string>
<string name="moreinfo">More Info</string>
<string name="reportproblem">Report problem</string>
<string name="basicInstructions">Hello &lt;br /&gt; World\n
3</string>
<string name="chooseStop">Favorite Stops</string>
<string name="chooseStopInBuilder">Choose a stop</string>
<string name="chooseRouteInBuilder">Choose a route</string>
    <string name="chooseVehicleInBuilder">Choose a vehicle</string>
<string name="noalerts">No Alerts</string>

    <string name="alwaysShowLocation">Always show location?</string>
    <string name="alwaysShowLocationCheckbox">gpsAlwaysOn</string>
    <string name="alwaysShowLocationSummary">Turns on location when app is in use</string>
    <string name="all_buses">All vehicles</string>
    <string name="vehicles_on_one_route">Vehicles on one route</string>
    <string name="stops_and_predictions_on_all_routes">Stops and predictions on all routes</string>
    <string name="stops_and_predictions_on_one_route">Stops and predictions on one route</string>
    <string name="favorite_stops">Favorite stops</string>
    <string name="updateContinuouslyInterval">UpdateContinuouslyInterval</string>
    <string name="thereAreNoAlerts">There are currently no alerts or alerts have not been downloaded yet.</string>
    <string name="thereAreCurrentlyNoPredictions">There are currently no predictions for this stop or predictions have not been downloaded yet.</string>
    <string name="chooseMode">Choose Mode</string>
    <string name="modeOption">Mode Option</string>
    <string name="bus_directions">Vehicles by direction</string>
    <string name="busstop_directions">Stops and predictions by direction</string>
    <string name="getDirectionsCurrentLocation">Current Location</string>
    <string name="pickCurrentLocation">My Current Location</string>
    <string name="chooseAStop">Pick a stop</string>
    <string name="startingPoint">Starting point</string>
    <string name="endingPoint">Ending point</string>
    <string name="places">Places</string>
    <string name="intersection_stops">Stops and predictions that\ncross through a point on the map</string>
    <string name="tutorialStep1">This tutorial will go over the basic features of the app. If you want to go through it again, it\'s available under \'Settings\' in the menu. The menu is accessed by pressing the bus icon in the upper left.</string>
<string name="tutorialStep2">This app does two main things: vehicle locations and transit predictions. This information is provided free of charge by the MBTA. Apps like this one would not be possible without their time and effort.</string>
<string name="tutorialStep4">This field shows your current route. You may type in a new route to change your current route, or you can select it using \'Routes\' from the menu.</string>
<string name="tutorialStep5">This button lets you to choose whether you want to see vehicle locations or transit predictions.</string>
<string name="tutorialStep6">You can tap a vehicle or transit stop to see more information about it. By default this information is updated roughly every 15 seconds; you can adjust this in the settings if you wish.</string>
<string name="tutorialStep7">You can mark stops as favorites by clicking the star in the upper right of the popup box. When in favorites mode you see only stops which are marked as a favorite. Note that many routes will have a stop very close to another stop, which may be confusing. These will appear as two separate icons.</string>
<string name="tutorialStep9">Please send me an email if you have any questions! bostonbusmap@gmail.com</string>
    <string name="no_maps">Unable to find Google Maps</string>
    <string name="favoriteButton">Favorite button</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="open_drawer">Open drawer</string>
    <string name="mark_stop_as_favorite">Mark stop as favorite</string>
    <string name="ellipsis">...</string>
    <string name="routes_for_stop">Routes for stop</string>
    <string name="vehicles">Vehicles</string>
    <string name="edit_name">Edit name</string>
    <string name="delete">Delete</string>
    <string name="more_info">More info</string>
    <string name="report_description">What\'s the problem? (for example, the bus that was supposed to arrive never came, a bus came without a prediction, etc)</string>
</resources>
