<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<ListPreference android:key="@string/updateContinuouslyInterval" android:title="@string/updateContinuously" android:entryValues="@array/updateContinuouslyValues" android:entries="@array/updateContinuouslyKeys"/><CheckBoxPreference android:key="@string/showUnpredictableBusesCheckbox" android:title="@string/showUnpredictableBuses"></CheckBoxPreference>
<!--<CheckBoxPreference android:key="@string/hideCircleCheckbox" android:title="@string/hideBlueCircle" android:summary="@string/hideBlueCircleSummary"/>-->
<CheckBoxPreference android:key="showTraffic" android:title="@string/showTrafficTitle" />
<CheckBoxPreference android:title="@string/showRoutePath" android:key="showRouteLineCheckbox2" android:summary="@string/showRoutePathSummary"></CheckBoxPreference>
<CheckBoxPreference android:title="@string/alwaysShowLocation" android:key="@string/alwaysShowLocationCheckbox" android:summary="@string/alwaysShowLocationSummary"></CheckBoxPreference>

<CheckBoxPreference android:title="@string/allRoutesBlueTitle" android:key="@string/allRoutesBlue" android:summary="@string/allRoutesBlueSummary"></CheckBoxPreference>
<Preference android:summary="Clears recent search history for this app" android:title="Clear search history" android:key="clearHistory"></Preference>
<Preference android:summary="" android:title="Show tutorial" android:key="showTutorial"></Preference>
<!--<Preference android:summary="Shows basic usage instructions" android:title="Instructions" android:key="instructions" />-->
<Preference android:title="Google Maps License Info" android:key="showMapsLegal"></Preference>
    <Preference android:title="About BostonBusMap" android:key="about"></Preference>









</PreferenceScreen>
